packages/react/src/components/Checkbox/Checkbox.css
@import url('../../styles/tokens/checkbox.css');

.hearth-Checkbox {
  /* we do this so that the gap between the checkbox & label is clickable */
  .hearth-Label {
    position: relative;

    &::before {
      content: '';
      position: absolute;
      height: 100%;
      width: 100%;
      left: -8px;
    }
  }
}

.hearth-CheckboxRoot {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: top;
  flex-shrink: 0;
  padding: 0;
  height: 24px;
  width: 24px;
  border: none;
  border-radius: var(--h-checkbox-border-radius);
  background-color: var(--h-checkbox-unchecked-background-color);
  outline: none;
  box-shadow: 0 0 0 var(--h-checkbox-outline-width) var(--h-checkbox-outline-color);
  color: var(--h-checkbox-checked-icon-color);

  &::before {
    content: '';
    display: block;
    height: 24px;
    width: 24px;
    border-radius: var(--h-checkbox-border-radius);
    background-color: inherit;
    box-shadow: inset 0 0 0 var(--h-checkbox-border-width)
      var(--h-checkbox-box-shadow-color, transparent);
    outline: 2px solid transparent;
  }

  &:where([data-state='unchecked']) {
    background-color: var(--h-checkbox-unchecked-background-color);

    --h-checkbox-box-shadow-color: var(--h-checkbox-unchecked-border-color);
  }

  &:where([data-state='checked']) {
    background-color: var(--h-checkbox-checked-background-color);

    --h-checkbox-box-shadow-color: var(--h-checkbox-checked-border-color);
  }

  @media (hover: hover) {
    &:where(:hover:enabled) {
      --h-checkbox-outline-color: var(--h-checkbox-outline-color-hover);
    }
  }

  &:where(:active:enabled) {
    --h-checkbox-outline-color: var(--h-checkbox-outline-color-active);
  }

  &:where(:focus-visible) {
    outline: 2px solid var(--h-focus-border);
    outline-offset: 1px;
  }

  .hearth-CheckboxIndicator {
    position: absolute;
  }
}

.hearth-CheckboxLabel {
  gap: var(--h-checkbox-tile-gap);
}

